<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="12dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:textColor="@color/hard_grey"
        android:textSize="14sp"
        android:fontFamily="@font/barlow_regular"
        android:layout_marginTop="16dp"
        android:gravity="center_horizontal"
        android:text="@string/logout" />

    <View
        android:layout_width="match_parent"
        android:layout_marginTop="16dp"
        android:background="@color/light_grey"
        android:layout_height=".5dp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="0dp"
            android:gravity="center"
            android:id="@+id/yes"
            android:text="@string/yes"
            android:textColor="@color/hard_grey"
            android:fontFamily="@font/barlow_medium"
            android:layout_weight="1"
            android:textSize="14sp"
            android:layout_height="match_parent" />

        <View
            android:layout_width=".5dp"
            android:background="@color/light_grey"
            android:layout_gravity="center"
            android:layout_height="60dp" />

        <TextView
            android:layout_width="0dp"
            android:text="@string/no"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="14sp"
            android:id="@+id/no"
            android:textColor="@color/hard_grey"
            android:fontFamily="@font/barlow_medium"
            android:layout_height="match_parent" />
    </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>