<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorbg"
    tools:context=".forgetPassword.ForgetPasswordActivity">

    <include layout="@layout/toolbar" />

    <ImageView
        android:id="@+id/lockLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="64sp"
        android:background="@drawable/ic_forgot_password" />

    <TextView
        android:id="@+id/forgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lockLogo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="36dp"
        android:text="@string/forgot_your_password"
        android:textColor="#101010"
        android:fontFamily="@font/barlow_bold"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/txtForgot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/forgotPassword"
        android:layout_marginLeft="52dp"
        android:layout_marginTop="18dp"
        android:layout_marginRight="52dp"
        android:gravity="center"
        android:fontFamily="@font/barlow_regular"
        android:lineSpacingExtra="8dp"
        android:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam"
        android:textColor="#666565"
        android:textSize="14dp" />

    <TextView
        android:id="@+id/txtYourEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtForgot"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="66dp"
        android:alpha=".5"
        android:fontFamily="@font/barlow_regular"
        android:text="@string/your_email"
        android:textColor="#666565"
        android:textSize="17dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtYourEmail"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="30dp"
        android:id="@+id/edtEmail"
        android:singleLine="true"
        android:fontFamily="@font/barlow_medium"
        android:inputType="textEmailAddress"
        android:text="email123@gmail.com"
        android:textColor="#666565"
        android:textSize="17dp" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="34dp"
        android:layout_marginEnd="34dp"
        android:layout_marginBottom="16dp">

        <TextView
            android:id="@+id/btnSend"
            android:layout_width="match_parent"
            android:layout_height="53dp"
            android:background="@drawable/bg_btn_viewpager"
            android:gravity="center"
            android:text="@string/send"
            android:fontFamily="@font/barlow_bold"
            android:textAllCaps="true"
            android:textColor="@color/colorWhite"
            android:textSize="18dp"
            android:visibility="visible"/>

        <TextView
            android:id="@+id/resendPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btnSend"
            android:fontFamily="@font/barlow_regular"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:text="@string/resend_password"
            android:textColor="#666565"
            android:textSize="14dp" />
    </RelativeLayout>


</RelativeLayout>