<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".subscriptionScreen.SubscriptionActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <ImageView
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:scaleType="fitXY"
            android:src="@mipmap/banner"
            app:layout_constraintDimensionRatio="1.5:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/crossImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="24dp"
            android:padding="10dp"
            android:src="@drawable/ic_baseline_close_24"
            app:layout_constraintBottom_toBottomOf="@+id/view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/view"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/txtPercentOffText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/barlow_bold"
            android:text="SAVE 40%"
            android:textColor="@color/orange"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/view"
            app:layout_constraintVertical_bias="1.0"
            tools:ignore="HardcodedText" />

        <TextView
            android:id="@+id/txtHeadingText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:elevation="2dp"
            android:fontFamily="@font/barlow_bold"
            android:gravity="center"
            android:maxLines="2"
            android:text="@string/upgrade_to_get_unlimited_access"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintStart_toStartOf="@+id/guideline1"
            app:layout_constraintTop_toBottomOf="@+id/view"
            tools:ignore="UnusedAttribute" />


        <CheckBox
            android:id="@+id/checkUnlimitedAcess"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:button="@drawable/radiobutton_fitness_level_selector"
            android:elevation="2dp"
            android:fontFamily="@font/barlow_medium"
            android:paddingLeft="20dp"
            android:text="@string/unlimited_access_to_all"
            android:textColor="@color/medium_grey"
            android:textSize="14sp"
            android:clickable="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/crossImage"
            app:layout_constraintTop_toBottomOf="@+id/txtHeadingText"
            tools:ignore="RtlHardcoded,RtlSymmetry,UnusedAttribute" />

        <CheckBox
            android:id="@+id/checkTrackExcersise"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:elevation="2dp"
            android:fontFamily="@font/barlow_medium"
            android:paddingLeft="20dp"
            android:button="@drawable/radiobutton_fitness_level_selector"
            android:text="@string/tracking_exercise"
            android:textColor="@color/medium_grey"
            android:textSize="14sp"
            android:clickable="false"
            app:layout_constraintEnd_toEndOf="@+id/checkUnlimitedAcess"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/checkUnlimitedAcess"
            app:layout_constraintTop_toBottomOf="@+id/checkUnlimitedAcess"
            tools:ignore="RtlHardcoded,RtlSymmetry,UnusedAttribute" />

        <CheckBox
            android:id="@+id/checkPersonalised"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:elevation="2dp"
            android:fontFamily="@font/barlow_medium"
            android:paddingLeft="20dp"
            android:text="@string/personalised_plans"
            android:textColor="@color/medium_grey"
            android:textSize="14sp"
            android:clickable="false"
            android:button="@drawable/radiobutton_fitness_level_selector"
            app:layout_constraintEnd_toEndOf="@+id/checkTrackExcersise"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/checkTrackExcersise"
            app:layout_constraintTop_toBottomOf="@+id/checkTrackExcersise"
            tools:ignore="RtlHardcoded,RtlSymmetry,UnusedAttribute" />

        <CheckBox
            android:id="@+id/checkProgGoal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:elevation="2dp"
            android:fontFamily="@font/barlow_medium"
            android:paddingLeft="20dp"
            android:text="@string/personalised_plans"
            android:textColor="@color/medium_grey"
            android:textSize="14sp"
            android:clickable="false"
            android:button="@drawable/radiobutton_fitness_level_selector"
            app:layout_constraintEnd_toEndOf="@+id/checkPersonalised"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/checkPersonalised"
            app:layout_constraintTop_toBottomOf="@+id/checkPersonalised"
            tools:ignore="RtlHardcoded,RtlSymmetry,UnusedAttribute" />

        <TextView
            android:id="@+id/txtHeading2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:elevation="2dp"
            android:fontFamily="@font/barlow_regular"
            android:gravity="start"
            android:text="@string/heading_text_subscription"
            android:textColor="@color/medium_grey"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="@+id/checkProgGoal"
            app:layout_constraintStart_toStartOf="@+id/checkProgGoal"
            app:layout_constraintTop_toBottomOf="@+id/checkProgGoal"
            tools:ignore="HardcodedText,UnusedAttribute" />

        <TextView
            android:id="@+id/txtHeading3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:elevation="2dp"
            android:fontFamily="@font/barlow_regular"
            android:text="@string/heading_text_subscription"
            android:textColor="@color/medium_grey"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="@+id/txtHeading2"
            app:layout_constraintStart_toStartOf="@+id/txtHeading2"
            app:layout_constraintTop_toBottomOf="@+id/txtHeading2"
            tools:ignore="HardcodedText,UnusedAttribute" />

        <View
            android:id="@+id/view3"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/colorbg"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view2"
            app:layout_constraintVertical_bias="0.0" />


        <View
            android:id="@+id/view2"
            android:layout_width="0dp"
            android:layout_height="0.5dp"
            app:layout_constraintBottom_toBottomOf="@+id/txtHeadingText"
            app:layout_constraintEnd_toEndOf="@+id/txtHeadingText"
            app:layout_constraintStart_toStartOf="@+id/txtHeadingText"
            app:layout_constraintTop_toTopOf="@+id/txtHeadingText" />

        <Button
            android:id="@+id/btnSubscribe"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="@drawable/bg_btn_viewpager"
            android:fontFamily="@font/barlow_bold"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:text="@string/subscribe_now"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/view3"
            app:layout_constraintEnd_toEndOf="@+id/txtHeading3"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="@+id/txtHeading3"
            app:layout_constraintTop_toBottomOf="@+id/txtHeading3"
            app:layout_constraintVertical_bias="1.0" />


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.19" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.77" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>